--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<DOCTYPE html
- <head>
-<title> zcfx </title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>zcfx</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
- <div class="img-container">
-<img src="https://cdn.discordapp.com/attachments/1333928325013311539/1419831914545807371/lJf7nfG.png?ex=68fcb843&is=68fb66c3&hm=3144c45640f7bcf4458b103956eedee07d875ee5f03a74193a1008a0952fcfa9&" 
-     alt="Discord Image" 
-     width="400">
+  <div class="img-container">
+    <img src="https://cdn.discordapp.com/attachments/1333928325013311539/1419831914545807371/lJf7nfG.png" 
+         alt="Discord Image" 
+         width="400">
   </div>
-<script>
+
+  <script>
     const container = document.querySelector('.img-container');
     const image = container.querySelector('img');
 
@@ -21,12 +27,10 @@
       const rotateY = ((x - centerX) / centerX) * 10;
       image.style.transform = `rotateX(${-rotateX}deg) rotateY(${rotateY}deg) scale(1.05)`;
     });
-  
-  // wah wah wah 
 
     container.addEventListener('mouseleave', () => {
       image.style.transform = 'rotateX(0deg) rotateY(0deg) scale(1)';
     });
   </script>
-  
 </body>
+</html>
